1차 퍼블완료(문의하기 팝업제외)

--- a/about/ci.html
+++ b/about/ci.html
@@ -24,22 +24,22 @@ $PAGE_CODE_2 = "0103";
                     <li class="active"><a href="../about/ci.html">CI</a></li>
                 </ul>
                 <div class="contents">
-                    <h3>오케이좋아연예인봉사단<br />사회공동체 꽃을 피우다</h3>
+                    <h3 data-aos="fade-up">오케이좋아연예인봉사단<br /> 사회공동체 꽃을 피우다</h3>
                     <div class="right">
-                        <p>
+                        <p data-aos="fade-up">
                             알파벳 O와 K를 활용하여 나비를 모티브로 개발하였습니다. <br class="pc-only" />
                             즐겁고 밝은 노란계열의 알파벳 O는 봉사하는 연예인들을 희망과 긍정의 그린계열의 알파벳 K는 <br class="pc-only" />
                             우리가 지원해야하는 소외되고 어려운 사회적약자층을 의미합니다. O와 K 사이의 사랑과 활력의 핑크계열 하트는 봉사함으로써 피어나는 사회의 밝고 긍정적인 영향을 표현하였습니다. <br class="pc-only" />
                             나비가 있어 꽃을 피우듯, 오케이좋아연예인봉사단의 활동을 통해 사회공동체 모두가 <br class="pc-only" />
                             행복한 희망의 꽃을 피우겠다는 포부를 담았습니다.
                         </p>
-                        <div class="box">
+                        <div class="box" data-aos="fade-up">
                             <h4>심볼</h4>
                             <div class="img-wrap">
                                 <img src="../images/common/symbol_big.png" alt="심볼">
                             </div>
                         </div>
-                        <div class="box">
+                        <div class="box" data-aos="fade-up">
                             <h4>시그니처</h4>
                             <div class="img-wrap">
                                 <img src="../images/common/logo02.png" alt="오케이좋아">
@@ -55,24 +55,24 @@ $PAGE_CODE_2 = "0103";
         <article>
             <div class="wrap">
                 <div class="contents">
-                    <h3>컬리시스템</h3>
+                    <h3 data-aos="fade-up">컬리시스템</h3>
                     <div class="right">
                         <ul class="color_list">
-                            <li>
+                            <li data-aos="fade-up">
                                 <div class="color_box"></div>
                                 <span>
                                     CMYK 89 / 32 / 89 / 22 <br />
                                     RGB #f8a82a
                                 </span>
                             </li>
-                            <li>
+                            <li data-aos="fade-up">
                                 <div class="color_box"></div>
                                 <span>
                                     CMYK 34 / 6 / 95 / 0 <br/>
                                     RGB #c3d600
                                 </span>
                             </li>
-                            <li>
+                            <li data-aos="fade-up">
                                 <div class="color_box"></div>
                                 <span>
                                     CMYK 16 / 90 / 16 / 0 <br/>
