--- a/about/history.html
+++ b/about/history.html
@@ -24,11 +24,11 @@ $PAGE_CODE_2 = "0102";
                     <li><a href="../about/ci.html">CI</a></li>
                 </ul>
                 <div class="content">
-                    <div class="banner_wrap">
+                    <div class="banner_wrap" data-aos="fade-up">
                         <img src="../images/about/history_banner01.png" alt="오케이좋아 연예인봉사단">
                     </div>
                     <div class="center">
-                        <div class="logo" data-aos="fade-up">
+                        <div class="logo" data-aos="fade-up" data-aos="fade-up">
                             <img src="../images/common/logo_gray.png" alt="오케이좋아">
                         </div>
                         <div class="info">
@@ -126,7 +126,7 @@ $PAGE_CODE_2 = "0102";
                             </div>
                         </div>
                     </div>
-                    <div class="swiper">
+                    <div class="swiper" data-aos="fade-up">
                         <div class="swiper-wrapper">
                         <div class="swiper-slide">
                                 <img src="../images/about/history01.png" alt="연혁">
