--- a/about/okzzoa.html
+++ b/about/okzzoa.html
@@ -24,17 +24,16 @@ $PAGE_CODE_2 = "0101";
                     <li><a href="../about/ci.html">CI</a></li>
                 </ul>
                 <div class="content">
-                    <div class="banner_wrap">
+                    <div class="banner_wrap" data-aos="fade-up">
                         <img src="../images/about/okzzoa_banner01.png" alt="오케이좋아 연예인봉사단">
                     </div>
                     <div class="text">
-                        <h3>
+                        <h3 data-aos="fade-up">
                             오케이좋아 <br class="pc-only">
                             연예인 봉사단은
                         </h3>
-                        <p>
-                            우리나라 최초의 연예인 봉사단으로 봉사의 중요성과 그 가치를 널리 전파하고자 2023년 봉사 단체를 창단하였습니다. <br class="block-only">
-                            <br class="block-only">
+                        <p data-aos="fade-up">
+                            우리나라 최초의 연예인 봉사단으로 봉사의 중요성과 그 가치를 널리 전파하고자 2023년 봉사 단체를 창단하였습니다. <br class="pc-only">
                             많은 사랑을 받아온 연예인들이 따뜻한 온기가 필요한 사회약자층들에게 따듯한 마음과 행복한 웃음을 선사하면서 <br class="pc-only" />
                             사회 전반에 긍정적인 영향력을 발휘하고 있습니다. <br class="pc-only" />
                             또한, 대한민국을 봉사의 선진국으로 이끌겠다는 사명감으로 다양한 사회공헌 활동을 전개하고 있습니다.
@@ -47,16 +46,16 @@ $PAGE_CODE_2 = "0101";
     <section class="s02">
         <article>
             <div class="wrap">
-                <h3>
+                <h3 data-aos="fade-up">
                     연예인 봉사단의 필요성
                 </h3>
                 <div class="contents">
-                    <div class="banner_wrap">
+                    <div class="banner_wrap" data-aos="fade-up">
                         <img src="../images/about/okzzoa_banner02.png" alt="">
                     </div>
                     <div class="info">
                         <ul>
-                            <li>
+                            <li data-aos="fade-up">
                                 <div class="img-wrap">
                                     <img src="../images/about/s02_01.png" alt="친숙함과 친밀감">
                                 </div>
@@ -69,7 +68,7 @@ $PAGE_CODE_2 = "0101";
                                     따뜻한 마음을 전달하기 쉽습니다.
                                 </span>
                             </li>
-                            <li>
+                            <li data-aos="fade-up">
                                 <div class="img-wrap">
                                     <img src="../images/about/s02_02.png" alt="파급효과">
                                 </div>
@@ -82,7 +81,7 @@ $PAGE_CODE_2 = "0101";
                                     파급효과가 큽니다.
                                 </span>
                             </li>
-                            <li>
+                            <li data-aos="fade-up">
                                 <div class="img-wrap">
                                     <img src="../images/about/s02_03.png" alt="홍보효과">
                                 </div>
@@ -104,12 +103,12 @@ $PAGE_CODE_2 = "0101";
     <section class="s03">
         <article>
             <div class="wrap">
-                <h3>
+                <h3 data-aos="fade-up">
                     연예인 봉사단의 지향점
                 </h3>
                 <div class="contents">
                     <ul>
-                        <li>
+                        <li data-aos="fade-up">
                             <div class="img-wrap">
                                 <img src="../images/about/s03_01.png" alt="나눔은 쉽게">
                             </div>
@@ -123,7 +122,7 @@ $PAGE_CODE_2 = "0101";
                                 </span>
                             </div>
                         </li>
-                        <li>
+                        <li data-aos="fade-up">
                             <div class="img-wrap">
                                 <img src="../images/about/s03_02.png" alt="행복은 크게">
                             </div>
@@ -136,7 +135,7 @@ $PAGE_CODE_2 = "0101";
                                 </span>
                             </div>
                         </li>
-                        <li>
+                        <li data-aos="fade-up">
                             <div class="img-wrap">
                                 <img src="../images/about/s03_03.png" alt="봉사의 세계화">
                             </div>
