--- a/about/organization.html
+++ b/about/organization.html
@@ -24,73 +24,73 @@ $PAGE_CODE_2 = "0103";
                     <li><a href="../about/ci.html">CI</a></li>
                 </ul>
                 <div class="contents">
-                    <h3 class="bg">
+                    <h3 class="bg" data-aos="fade-up">
                         오케이좋아연예인봉사단을 이끌어가고 있는 이사회를 소개합니다.
                     </h3>
                     <div class="graph">
-                        <div class="pc_img">
+                        <div class="pc_img" data-aos="fade-up">
                             <img src="../images/about/organization_pc.png" alt="">
                         </div>
-                        <div class="mo_img">
+                        <div class="mo_img" data-aos="fade-up">
                             <img src="../images/about/organization_mo.png" alt="">
                         </div>
                     </div>
                     <div class="list-wrap">
-                        <h3>오케이좋아연예인봉사단</h3>
+                        <h3 data-aos="fade-up">오케이좋아연예인봉사단</h3>
                         <ul>
-                            <li>
+                            <li data-aos="fade-up">
                                 <div class="img-wrap"><img src="../images/about/organization_01.png" alt="배우 이정룡님"></div>
                                 <p>배우 이정룡님</p>
                             </li>
-                            <li>
+                            <li data-aos="fade-up">
                                 <div class="img-wrap"><img src="../images/about/organization_02.png" alt="배우 박형준님"></div>
                                 <p>배우 박형준님</p>
                             </li>
-                            <li>
+                            <li data-aos="fade-up">
                                 <div class="img-wrap"><img src="../images/about/organization_03.png" alt="배우 이일화님"></div>
                                 <p>배우 이일화님</p>
                             </li>
-                            <li>
+                            <li data-aos="fade-up">
                                 <div class="img-wrap"><img src="../images/about/organization_04.png" alt="배우 지현우님"></div>
                                 <p>배우 지현우님</p>
                             </li>
-                            <li>
+                            <li data-aos="fade-up">
                                 <div class="img-wrap"><img src="../images/about/organization_05.png" alt="배우 감예령님"></div>
                                 <p>배우 감예령님</p>
                             </li>
-                            <li>
+                            <li data-aos="fade-up">
                                 <div class="img-wrap"><img src="../images/about/organization_06.png" alt="배우 정인호님"></div>
                                 <p>배우 정인호님</p>
                             </li>
-                            <li>
+                            <li data-aos="fade-up">
                                 <div class="img-wrap"><img src="../images/about/organization_07.png" alt="배우 조은숙님"></div>
                                 <p>배우 조은숙님</p>
                             </li>
-                            <li>
+                            <li data-aos="fade-up">
                                 <div class="img-wrap"><img src="../images/about/organization_01.png" alt="배우 이정룡님"></div>
                                 <p>배우 이정룡님</p>
                             </li>
-                            <li>
+                            <li data-aos="fade-up">
                                 <div class="img-wrap"><img src="../images/about/organization_02.png" alt="배우 박형준님"></div>
                                 <p>배우 박형준님</p>
                             </li>
-                            <li>
+                            <li data-aos="fade-up">
                                 <div class="img-wrap"><img src="../images/about/organization_03.png" alt="배우 이일화님"></div>
                                 <p>배우 이일화님</p>
                             </li>
-                            <li>
+                            <li data-aos="fade-up">
                                 <div class="img-wrap"><img src="../images/about/organization_04.png" alt="배우 지현우님"></div>
                                 <p>배우 지현우님</p>
                             </li>
-                            <li>
+                            <li data-aos="fade-up">
                                 <div class="img-wrap"><img src="../images/about/organization_05.png" alt="배우 감예령님"></div>
                                 <p>배우 감예령님</p>
                             </li>
-                            <li>
+                            <li data-aos="fade-up">
                                 <div class="img-wrap"><img src="../images/about/organization_06.png" alt="배우 정인호님"></div>
                                 <p>배우 정인호님</p>
                             </li>
-                            <li>
+                            <li data-aos="fade-up">
                                 <div class="img-wrap"><img src="../images/about/organization_07.png" alt="배우 조은숙님"></div>
                                 <p>배우 조은숙님</p>
                             </li>
