--- a/action/domestic.html
+++ b/action/domestic.html
@@ -23,7 +23,7 @@ $PAGE_CODE_2 = "0201";
                     <li><a href="../action/review.html">활동후기</a></li>
                 </ul>
                 <div class="contents">
-                    <div class="info">
+                    <div class="info" data-aos="fade-up">
                         <div class="banner">
                             <img src="../images/action/domestic01.png" alt="연예인들과 함께하는 즐거운 한끼">
                         </div>
@@ -45,9 +45,9 @@ $PAGE_CODE_2 = "0201";
     <section class="s02">
         <article>
             <div class="wrap">
-                <div class="fs-32">활동 분야</div>
+                <div class="fs-32" data-aos="fade-up">활동 분야</div>
                 <ul>
-                    <li>
+                    <li data-aos="fade-up">
                         <div class="img-wrap"><img src="../images/action/domestic02.png" alt="사랑의 푸드트럭"></div>
                         <div class="text">
                             <div class="logo"><img src="../images/common/symbol.png" alt="오케이좋아연예인봉사단 심볼"></div>
@@ -58,7 +58,7 @@ $PAGE_CODE_2 = "0201";
                             </p>
                         </div>
                     </li>
-                    <li>
+                    <li data-aos="fade-up">
                         <div class="img-wrap"><img src="../images/action/domestic03.png" alt="d5d5d5"></div>
                         <div class="text">
                             <div class="logo"><img src="../images/common/symbol.png" alt="오케이좋아연예인봉사단 심볼"></div>
@@ -69,7 +69,7 @@ $PAGE_CODE_2 = "0201";
                             </p>
                         </div>
                     </li>
-                    <li>
+                    <li data-aos="fade-up">
                         <div class="img-wrap"><img src="../images/action/domestic04.png" alt="효도잔치 한마당"></div>
                         <div class="text">
                             <div class="logo"><img src="../images/common/symbol.png" alt="오케이좋아연예인봉사단 심볼"></div>
@@ -80,7 +80,7 @@ $PAGE_CODE_2 = "0201";
                             </p>
                         </div>
                     </li>
-                    <li>
+                    <li data-aos="fade-up">
                         <div class="img-wrap"><img src="../images/action/domestic05.png" alt="자매결연"></div>
                         <div class="text">
                             <div class="logo"><img src="../images/common/symbol.png" alt="오케이좋아연예인봉사단 심볼"></div>
@@ -91,7 +91,7 @@ $PAGE_CODE_2 = "0201";
                             </p>
                         </div>
                     </li>
-                    <li>
+                    <li data-aos="fade-up">
                         <div class="img-wrap"><img src="../images/action/domestic06.png" alt="피해 현장 봉사"></div>
                         <div class="text">
                             <div class="logo"><img src="../images/common/symbol.png" alt="오케이좋아연예인봉사단 심볼"></div>
