--- a/action/overseas.html
+++ b/action/overseas.html
@@ -18,23 +18,22 @@ $PAGE_CODE_2 = "0201";
         <article>
             <div class="wrap">
                 <ul class="tabs">
-                    <li class="active"><a href="../action/domestic.html">국내활동</a></li>
-                    <li><a href="../action/overseas.html">해외활동</a></li>
+                    <li><a href="../action/domestic.html">국내활동</a></li>
+                    <li class="active"><a href="../action/overseas.html">해외활동</a></li>
                     <li><a href="../action/review.html">활동후기</a></li>
                 </ul>
                 <div class="contents">
-                    <div class="info">
+                    <div class="info" data-aos="fade-up">
                         <div class="banner">
-                            <img src="../images/action/domestic01.png" alt="연예인들과 함께하는 즐거운 한끼">
+                            <img src="../images/action/overseas01.png" alt="국내를 넘어 한류봉사의 확립">
                         </div>
                         <div class="text">
                             <div class="fs-32">
-                                연예인들과 함께하는 즐거운 한끼
+                                국내를 넘어 한류봉사의 확립
                             </div>
                             <p>
-                                부담 없는 한끼의 식사와 연예인들과의 즐거운 만남으로 일상의 무료함을 달래고 
-                                삶의 활력을 되찾는 의미 있는 시간을 만들며, 따뜻한 온기가 필요한 모든 이들에게 
-                                사랑을 되돌려 주려 합니다.
+                                많은 사랑을 받아온 방송연예인을 주축으로 따뜻한 온기가 <br class="pc-only">
+                                필요한 모든 이들에게 사랑을 되돌려 주려합니다.
                             </p>
                         </div>
                     </div>
@@ -45,7 +44,7 @@ $PAGE_CODE_2 = "0201";
     <section class="s02">
         <article>
             <div class="wrap">
-                <div class="fs-32">활동 분야</div>
+                <div class="fs-32" data-aos="fade-up">활동 분야</div>
             </div>
         </article>
     </section>
