--- a/action/review.html
+++ b/action/review.html
@@ -22,13 +22,13 @@ $PAGE_CODE_2 = "0203";
                     <li><a href="../action/overseas.html">해외활동</a></li>
                     <li class="active"><a href="../action/review.html">활동후기</a></li>
                 </ul>
-                <div class="title_wrap">
+                <div class="title_wrap" data-aos="fade-up">
                     <h2 class="fs-32">더불어 함게하는 세상</h2>
                     <p>오케이좋아연예인봉사단의 사랑 가득 활동 후기를 공개합니다.</p>
                 </div>
                 <div class="contents">
                     <ul>
-                        <li>
+                        <li data-aos="fade-up">
                             <a href="https://www.youtube.com/watch?v=buI3oeiS6lw" target="_blank">
                                 <div class="thumbnail">
                                     <img src="../images/main/s05_thumbnail.png" alt="썸네일">
@@ -38,7 +38,7 @@ $PAGE_CODE_2 = "0203";
                                 </p>
                             </a>
                         </li>
-                        <li>
+                        <li data-aos="fade-up">
                             <a href="https://www.youtube.com/watch?v=buI3oeiS6lw" target="_blank">
                                 <div class="thumbnail">
                                     <img src="../images/main/s05_thumbnail.png" alt="썸네일">
@@ -48,7 +48,7 @@ $PAGE_CODE_2 = "0203";
                                 </p>
                             </a>
                         </li>
-                        <li>
+                        <li data-aos="fade-up">
                             <a href="https://www.youtube.com/watch?v=buI3oeiS6lw" target="_blank">
                                 <div class="thumbnail">
                                     <img src="../images/main/s05_thumbnail.png" alt="썸네일">
@@ -58,7 +58,7 @@ $PAGE_CODE_2 = "0203";
                                 </p>
                             </a>
                         </li>
-                        <li>
+                        <li data-aos="fade-up">
                             <a href="https://www.youtube.com/watch?v=buI3oeiS6lw" target="_blank">
                                 <div class="thumbnail">
                                     <img src="../images/main/s05_thumbnail.png" alt="썸네일">
@@ -68,7 +68,7 @@ $PAGE_CODE_2 = "0203";
                                 </p>
                             </a>
                         </li>
-                        <li>
+                        <li data-aos="fade-up">
                             <a href="https://www.youtube.com/watch?v=buI3oeiS6lw" target="_blank">
                                 <div class="thumbnail">
                                     <img src="../images/main/s05_thumbnail.png" alt="썸네일">
@@ -78,7 +78,7 @@ $PAGE_CODE_2 = "0203";
                                 </p>
                             </a>
                         </li>
-                        <li>
+                        <li data-aos="fade-up">
                             <a href="https://www.youtube.com/watch?v=buI3oeiS6lw" target="_blank">
                                 <div class="thumbnail">
                                     <img src="../images/main/s05_thumbnail.png" alt="썸네일">
@@ -88,7 +88,7 @@ $PAGE_CODE_2 = "0203";
                                 </p>
                             </a>
                         </li>
-                        <li>
+                        <li data-aos="fade-up">
                             <a href="https://www.youtube.com/watch?v=buI3oeiS6lw" target="_blank">
                                 <div class="thumbnail">
                                     <img src="../images/main/s05_thumbnail.png" alt="썸네일">
@@ -98,7 +98,7 @@ $PAGE_CODE_2 = "0203";
                                 </p>
                             </a>
                         </li>
-                        <li>
+                        <li data-aos="fade-up">
                             <a href="https://www.youtube.com/watch?v=buI3oeiS6lw" target="_blank">
                                 <div class="thumbnail">
                                     <img src="../images/main/s05_thumbnail.png" alt="썸네일">
@@ -108,7 +108,7 @@ $PAGE_CODE_2 = "0203";
                                 </p>
                             </a>
                         </li>
-                        <li>
+                        <li data-aos="fade-up">
                             <a href="https://www.youtube.com/watch?v=buI3oeiS6lw" target="_blank">
                                 <div class="thumbnail">
                                     <img src="../images/main/s05_thumbnail.png" alt="썸네일">
