--- a/campaign/list01.html
+++ b/campaign/list01.html
@@ -22,12 +22,12 @@ $PAGE_CODE_2 = "0401";
                     <li><a href="../campaign/list02.html">캠페인후기</a></li>
                 </ul>
                 <div class="contents">
-                    <h2 class="fs-32">
+                    <h2 class="fs-32" data-aos="fade-up">
                         오케이좋아연예인봉사단에서는 어제보다 더 따뜻한 내일을 위해 <br class="pc-only" />
                         작지만 큰 변화를 만들어가는 다양한 캠페인을 펼치고 있습니다.
                     </h2>
                     <ul>
-                        <li class="t_01">
+                        <li class="t_01" data-aos="fade-up">
                             <a href="./detail.html">
                                 <div class="img-wrap"><img src="../images/campaign/list01.png" alt="캠페인"><span class="campaign_category">희망 나누기 캠페인</span></div>
                                 <div class="text">
@@ -37,7 +37,7 @@ $PAGE_CODE_2 = "0401";
                                 <div class="date ellipsis_line1">2024.07.01 ~ 2024.12.31</div>
                             </a>
                         </li>
-                        <li class="t_02">
+                        <li class="t_02" data-aos="fade-up">
                             <a href="./detail.html">
                                 <div class="img-wrap"><img src="../images/campaign/list02.png" alt="캠페인"><span class="campaign_category">사랑 나누기 캠페인</span></div>
                                 <div class="text">
@@ -47,7 +47,7 @@ $PAGE_CODE_2 = "0401";
                                 <div class="date ellipsis_line1">2024.07.01 ~ 2024.12.31</div>
                             </a>
                         </li>
-                        <li class="t_03">
+                        <li class="t_03" data-aos="fade-up">
                             <a href="./detail.html">
                                 <div class="img-wrap"><img src="../images/campaign/list03.png" alt="캠페인"><span class="campaign_category">ESG 지원 캠페인</span></div>
                                 <div class="text">
@@ -57,7 +57,7 @@ $PAGE_CODE_2 = "0401";
                                 <div class="date ellipsis_line1">2024.07.01 ~ 2024.12.31</div>
                             </a>
                         </li>
-                        <li class="t_01">
+                        <li class="t_01" data-aos="fade-up">
                             <a href="./detail.html">
                                 <div class="img-wrap"><img src="../images/campaign/list01.png" alt="캠페인"><span class="campaign_category">희망 나누기 캠페인</span></div>
                                 <div class="text">
@@ -67,7 +67,7 @@ $PAGE_CODE_2 = "0401";
                                 <div class="date ellipsis_line1">2024.07.01 ~ 2024.12.31</div>
                             </a>
                         </li>
-                        <li class="t_02">
+                        <li class="t_02" data-aos="fade-up">
                             <a href="./detail.html">
                                 <div class="img-wrap"><img src="../images/campaign/list02.png" alt="캠페인"><span class="campaign_category">사랑 나누기 캠페인</span></div>
                                 <div class="text">
@@ -77,7 +77,7 @@ $PAGE_CODE_2 = "0401";
                                 <div class="date ellipsis_line1">2024.07.01 ~ 2024.12.31</div>
                             </a>
                         </li>
-                        <li class="t_03">
+                        <li class="t_03" data-aos="fade-up">
                             <a href="./detail.html">
                                 <div class="img-wrap"><img src="../images/campaign/list03.png" alt="캠페인"><span class="campaign_category">ESG 지원 캠페인</span></div>
                                 <div class="text">
