--- a/main/index.html
+++ b/main/index.html
@@ -9,7 +9,10 @@ include_once "../include/header.html";
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="bg">
-                                <img src="../images/main/main_bg01.png" alt="">
+                                <!-- <img src="../images/main/main_bg01.png" alt=""> -->
+                                <video autoplay loop muted>
+                                    <source src="../images/main/main_video.mp4" type="video/mp4">
+                                </video>
                             </div>
                             <div class="title">
                                 <h2 data-aos="fade-up">
@@ -29,35 +32,35 @@ include_once "../include/header.html";
                 <div class="title">
                     <div class="logo" data-aos="fade-up"><img src="../images/common/symbol.png" alt="오케이좋아"></div>
                     <h2>
-                        <strong class="splitText" data-aos="fade-up" data-aos-delay="500">기쁨, 행복 그리고 사랑을 배달합니다.</strong><br />
-                        <span class="splitText" data-aos="fade-up" data-aos-delay="500">함께 나누는 즐거움</span>
+                        <strong class="splitText" data-aos="fade-up">기쁨, 행복 그리고 사랑을 배달합니다.</strong><br />
+                        <span class="splitText" data-aos="fade-up">함께 나누는 즐거움</span>
                     </h2>
                 </div>
                 <div class="trigger-wrap">
                     <div class="box">
                         <div class="img-wrap"><img src="../images/main/s02_01.png" alt=""></div>
-                        <strong>
-                            우리나라 최초의 연예인 봉사단으로 이웃에게
-                        </strong>
                         <p>
+                            <strong>
+                                우리나라 최초의 연예인 봉사단으로 이웃에게 <br />
+                            </strong>
                             따뜻한 마음과 행복한 웃음을 선사하고 있습니다.
                         </p>
                     </div>
                     <div class="box right">
                         <div class="img-wrap"><img src="../images/main/s02_02.png" alt=""></div>
-                        <strong>
-                            어제보다 따뜻한 우리를 만들기 위해서 본격적인
-                        </strong>
                         <p>
+                            <strong>
+                                어제보다 따뜻한 우리를 만들기 위해서 본격적인 <br />
+                            </strong>
                             봉사프로젝트를 진행하고 있습니다.
                         </p>
                     </div>
                     <div class="box">
                         <div class="img-wrap"><img src="../images/main/s02_03.png" alt=""></div>
-                        <strong>
-                            어제보다 따뜻한 우리를 만들기 위해서 본격적인
-                        </strong>
                         <p>
+                            <strong>
+                                어제보다 따뜻한 우리를 만들기 위해서 본격적인 <br />
+                            </strong>
                             봉사프로젝트를 진행하고 있습니다.
                         </p>
                     </div>
@@ -77,12 +80,12 @@ include_once "../include/header.html";
                         <h2 class="splitText" data-aos="fade-up">후원하기</h2>
                         <p class="splitText" data-aos="fade-up">당신의 소중한 후원으로 따듯한 세상을 만들어주세요.</p>
                     </div>
-                    <div class="more">
-                        <a href="javascript:alert('준비중입니다')">더보기+</a>
+                    <div class="more" data-aos="fade-up">
+                        <a href="../sponsor/index.html">더보기+</a>
                     </div>
                 </div>
                 <ul>
-                    <li data-aos="fade-up" data-aos-delay="300">
+                    <li data-aos="fade-up">
                         <div class="bg"><img src="../images/main/support_bg01.png" alt=""></div>
                         <div class="info">
                             <div class="text">
@@ -93,10 +96,10 @@ include_once "../include/header.html";
                                     변화를 만들 수 있습니다.
                                 </p>
                             </div>
-                            <div class="button"><a href="javascript:alert('준비중입니다')">후원하기</a></div>
+                            <div class="button"><a href="../sponsor/index.html">후원하기</a></div>
                         </div>
                     </li>
-                    <li data-aos="fade-up" data-aos-delay="500">
+                    <li data-aos="fade-up">
                         <div class="bg"><img src="../images/main/support_bg02.png" alt=""></div>
                         <div class="info">
                             <div class="text">
@@ -107,10 +110,10 @@ include_once "../include/header.html";
                                     그 이상의 가치를 실현합니다.
                                 </p>
                             </div>
-                            <div class="button"><a href="javascript:alert('준비중입니다')">후원하기</a></div>
+                            <div class="button"><a href="../sponsor/corporate.html">후원하기</a></div>
                         </div>
                     </li>
-                    <li data-aos="fade-up" data-aos-delay="700">
+                    <li data-aos="fade-up">
                         <div class="bg"><img src="../images/main/support_bg03.png" alt=""></div>
                         <div class="info">
                             <div class="text">
@@ -121,10 +124,10 @@ include_once "../include/header.html";
                                     동참하실 수 있습니다.
                                 </p>
                             </div>
-                            <div class="button"><a href="javascript:alert('준비중입니다')">후원하기</a></div>
+                            <div class="button"><a href="../sponsor/store.html">후원하기</a></div>
                         </div>
                     </li>
-                    <li data-aos="fade-up" data-aos-delay="900">
+                    <li data-aos="fade-up">
                         <div class="bg"><img src="../images/main/support_bg04.png" alt=""></div>
                         <div class="info">
                             <div class="text">
@@ -135,7 +138,7 @@ include_once "../include/header.html";
                                     투명하게 활동을 집행합니다.
                                 </p>
                             </div>
-                            <div class="button"><a href="javascript:alert('준비중입니다')">내역보기</a></div>
+                            <div class="button"><a href="../sponsor/list.html">내역보기</a></div>
                         </div>
                     </li>
                 </ul>
@@ -147,9 +150,9 @@ include_once "../include/header.html";
             <div class="wrap">
                 <div class="title">
                     <div class="logo" data-aos="fade-up"><img src="../images/common/symbol.png" alt="오케이좋아"></div>
-                    <h2 data-aos="fade-up" data-aos-delay="300">오케이 좋아 연예인 봉사단</h2>
+                    <h2 data-aos="fade-up">오케이 좋아 연예인 봉사단</h2>
                 </div>
-                <div class="swiper" data-aos="fade-up" data-aos-delay="500" dir="ltr">
+                <div class="swiper" data-aos="fade-up" dir="ltr">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="img-wrap"><img src="../images/about/organization_01.png" alt="배우 이정룡님"></div>
@@ -190,17 +193,17 @@ include_once "../include/header.html";
                 <div class="title-wrap">
                     <div class="title">
                         <div class="logo" data-aos="fade-up"><img src="../images/common/symbol.png" alt="오케이좋아"></div>
-                        <h2 data-aos="fade-up" data-aos-delay="300">봉사활동 스토리</h2>
-                        <p class="splitText" data-aos="fade-up" data-aos-delay="500">더불어 함께하는 세상, 오케이좋아연예인봉사단의 이야기를 공개합니다.</p>
-                        <div class="more" data-aos="fade-up" data-aos-delay="500">
-                            <a href="javascript:alert('준비중입니다')">더보기+</a>
+                        <h2 data-aos="fade-up">봉사활동 스토리</h2>
+                        <p class="splitText" data-aos="fade-up">더불어 함께하는 세상, 오케이좋아연예인봉사단의 이야기를 공개합니다.</p>
+                        <div class="more" data-aos="fade-up">
+                            <a href="../action/review.html">더보기+</a>
                         </div>
                     </div>
                 </div>
-                <div class="swiper" dir="ltr" data-aos="fade-up" data-aos-delay="500">
+                <div class="swiper" dir="ltr" data-aos="fade-up">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
-                            <a href="javascript:alert('준비중입니다');">
+                            <a href="https://www.youtube.com/watch?v=buI3oeiS6lw">
                                 <div class="img-wrap">
                                     <img src="../images/main/s05_thumbnail.png" alt="썸네일">
                                 </div>
@@ -211,7 +214,7 @@ include_once "../include/header.html";
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="javascript:alert('준비중입니다');">
+                            <a href="https://www.youtube.com/watch?v=buI3oeiS6lw">
                                 <div class="img-wrap">
                                     <img src="../images/main/s05_thumbnail.png" alt="썸네일">
                                 </div>
@@ -222,7 +225,7 @@ include_once "../include/header.html";
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="javascript:alert('준비중입니다');">
+                            <a href="https://www.youtube.com/watch?v=buI3oeiS6lw">
                                 <div class="img-wrap">
                                     <img src="../images/main/s05_thumbnail.png" alt="썸네일">
                                 </div>
@@ -233,7 +236,7 @@ include_once "../include/header.html";
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="javascript:alert('준비중입니다');">
+                            <a href="https://www.youtube.com/watch?v=buI3oeiS6lw">
                                 <div class="img-wrap">
                                     <img src="../images/main/s05_thumbnail.png" alt="썸네일">
                                 </div>
@@ -244,7 +247,7 @@ include_once "../include/header.html";
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="javascript:alert('준비중입니다');">
+                            <a href="https://www.youtube.com/watch?v=buI3oeiS6lw">
                                 <div class="img-wrap">
                                     <img src="../images/main/s05_thumbnail.png" alt="썸네일">
                                 </div>
@@ -255,7 +258,7 @@ include_once "../include/header.html";
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="javascript:alert('준비중입니다');">
+                            <a href="https://www.youtube.com/watch?v=buI3oeiS6lw">
                                 <div class="img-wrap">
                                     <img src="../images/main/s05_thumbnail.png" alt="썸네일">
                                 </div>
@@ -266,7 +269,7 @@ include_once "../include/header.html";
                             </a>
                         </div>
                         <div class="swiper-slide">
-                            <a href="javascript:alert('준비중입니다');">
+                            <a href="https://www.youtube.com/watch?v=buI3oeiS6lw">
                                 <div class="img-wrap">
                                     <img src="../images/main/s05_thumbnail.png" alt="썸네일">
                                 </div>
@@ -290,16 +293,16 @@ include_once "../include/header.html";
                 <div class="title-wrap">
                     <div class="title">
                         <div class="logo" data-aos="fade-up"><img src="../images/common/symbol.png" alt="오케이좋아"></div>
-                        <h2 data-aos="fade-up" data-aos-delay="300">활동 소식을 확인해보세요</h2>
-                        <p class="splitText" data-aos="fade-up" data-aos-delay="500">당신의 소중한 후원으로 따듯한 세상을 만들어주세요.</p>
-                        <div class="more" data-aos="fade-up" data-aos-delay="500">
-                            <a href="javascript:alert('준비중입니다')">더보기+</a>
+                        <h2 data-aos="fade-up">활동 소식을 확인해보세요</h2>
+                        <p class="splitText" data-aos="fade-up">당신의 소중한 후원으로 따듯한 세상을 만들어주세요.</p>
+                        <div class="more" data-aos="fade-up">
+                            <a href="../news/list.html">더보기+</a>
                         </div>
                     </div>
                 </div>
                 <div class="content">
                     <div class="detail">
-                        <a href="javascript:alert('준비중입니다')">
+                        <a href="../news/detail.html">
                             <div class="img-wrap">
                                 <img src="../images/main/s06_detail.png" alt="">
                             </div>
@@ -321,7 +324,7 @@ include_once "../include/header.html";
                         <ul>
                             <li>
                                 <div class="tit ellipsis_line1">
-                                    <a href="javascript:alert('준비중입니다')">
+                                    <a href="../news/detail.html">
                                         강동구 맛집 충무 보쌈 족발 가다!
                                     </a>
                                 </div>
@@ -332,7 +335,7 @@ include_once "../include/header.html";
                             </li>
                             <li>
                                 <div class="tit ellipsis_line1">
-                                    <a href="javascript:alert('준비중입니다')">
+                                    <a href="../news/detail.html">
                                         강동구 맛집 충무 보쌈 족발 가다!
                                     </a>
                                 </div>
@@ -343,7 +346,7 @@ include_once "../include/header.html";
                             </li>
                             <li>
                                 <div class="tit ellipsis_line1">
-                                    <a href="javascript:alert('준비중입니다')">
+                                    <a href="../news/detail.html">
                                         강동구 맛집 충무 보쌈 족발 가다!
                                     </a>
                                 </div>
@@ -368,15 +371,24 @@ include_once "../include/footer.html"
 ?>
 
 <script>
-    gsap.timeline({
-        scrollTrigger: {
-            trigger: ".s02",
-            start: "top top",
-            end: "+=400%",
-            scrub: 1,
+    ScrollTrigger.matchMedia({
+        "(min-width:1361px)": function() {
+            gsap.timeline({
+                    scrollTrigger: {
+                        trigger: ".s02",
+                        start: "top top",
+                        end: "+=400%",
+                        scrub: 1,
+                    }
+                })
+                .to(".s02 .box", {
+                    y: "-250%",
+                })
+        },
+        "(max-width:1360px)": function() {
+            gsap.to(".s02 .box", {
+                y: "0%",
+            })
         }
-    }).to(".s02 .box", {
-        y: "-250%"
     });
 </script>
-
