--- a/sponsor/corporate.html
+++ b/sponsor/corporate.html
@@ -24,7 +24,7 @@ $PAGE_CODE_2 = "0302";
                     <li><a href="../sponsor/list.html">후원내역</a></li>
                 </ul>
                 <div class="contents">
-                    <div class="info">
+                    <div class="info" data-aos="fade-up">
                         <div class="banner">
                             <img src="../images/sponsor/corporate01.png" alt="사회공헌 사업을 통한 후원">
                         </div>
@@ -46,16 +46,16 @@ $PAGE_CODE_2 = "0302";
         <article>
             <div class="wrap">
                 <div class="title">
-                    <div class="fs-32">오케이좋아 연예인봉사단과 함께하는</div>
-                    <div class="fs-32">Mint Service</div>
-                    <p>
+                    <div class="fs-32" data-aos="fade-up">오케이좋아 연예인봉사단과 함께하는</div>
+                    <div class="fs-32" data-aos="fade-up">Mint Service</div>
+                    <p data-aos="fade-up">
                         사회와 공생하는 사회적 책임투자에 저희 오케이좋아 연예인봉사단이 함께하려 합니다. <br class="pc-only" />
                         하이 서울기업의 ESG 정책과 그에 따른 프로그램 일환으로, <br class="pc-only" />
                         오케이좋아 연예인봉사단의 민트 서비스 봉사가 <br class="pc-only" />
                         1030개 업종의 하이 서울기업과 가족들의 삶에 행복을 선사하겠습니다
                     </p>
                 </div>
-                <div class="banner">
+                <div class="banner" data-aos="fade-up">
                     <div class="img-wrap"><img src="../images/sponsor/corporate02.png" alt="연예인봉사단"></div>
                     <div class="img-wrap"><img src="../images/sponsor/corporate03.png" alt="연예인봉사단"></div>
                 </div>
@@ -65,9 +65,9 @@ $PAGE_CODE_2 = "0302";
     <section class="s03">
         <article>
             <div class="wrap">
-                <div class="fs-32">Mint Service 개요</div>
+                <div class="fs-32" data-aos="fade-up">Mint Service 개요</div>
                 <ul>
-                    <li>
+                    <li data-aos="fade-up">
                         <div class="icon-wrap"><img src="../images/sponsor/corporate_icon01.png" alt="특별성"></div>
                         <p>특별성</p>
                         <span>
@@ -76,7 +76,7 @@ $PAGE_CODE_2 = "0302";
                             홍보 효과
                         </span>
                     </li>
-                    <li>
+                    <li data-aos="fade-up">
                         <div class="icon-wrap"><img src="../images/sponsor/corporate_icon02.png" alt="시장 선점"></div>
                         <p>시장 선점</p>
                         <span>
@@ -85,7 +85,7 @@ $PAGE_CODE_2 = "0302";
                             경쟁에서 선두 주자로 도약
                         </span>
                     </li>
-                    <li>
+                    <li data-aos="fade-up">
                         <div class="icon-wrap"><img src="../images/sponsor/corporate_icon03.png" alt="테스트"></div>
                         <p>테스트</p>
                         <span>
@@ -94,7 +94,7 @@ $PAGE_CODE_2 = "0302";
                             홍보 자료로 활용(모범 사례)
                         </span>
                     </li>
-                    <li>
+                    <li data-aos="fade-up">
                         <div class="icon-wrap"><img src="../images/sponsor/corporate_icon04.png" alt="정통성"></div>
                         <p>정통성</p>
                         <span>
@@ -104,10 +104,10 @@ $PAGE_CODE_2 = "0302";
                         </span>
                     </li>
                 </ul>
-                <div class="fs-32">Mint Service 제안</div>
-                <div class="graph">
+                <div class="fs-32" data-aos="fade-up">Mint Service 제안</div>
+                <div class="graph" data-aos="fade-up">
                     <img class="pc_img" src="../images/sponsor/corporate04_pc.png" alt="Mint Service 제안">
-                    <img class="mo_img" src="../images/sponsor/corporate04_mo.png" alt="Mint Service 제안">
+                    <img class="mo_img" src="../images/sponsor/corporate04_pc.png" alt="Mint Service 제안">
                 </div>
             </div>
         </article>
@@ -115,9 +115,9 @@ $PAGE_CODE_2 = "0302";
     <section class="s04">
         <article>
             <div class="wrap">
-                <div class="fs-32">후원 분야</div>
+                <div class="fs-32" data-aos="fade-up">후원 분야</div>
                 <ul>
-                    <li>
+                    <li data-aos="fade-up">
                         <div class="top">기금후원</div>
                         <div class="img-wrap"><img src="../images/sponsor/corporate05.png" alt="기금후원"></div>
                         <p>
@@ -125,7 +125,7 @@ $PAGE_CODE_2 = "0302";
                             기업연계 사업이 가능합니다.
                         </p>
                     </li>
-                    <li>
+                    <li data-aos="fade-up">
                         <div class="top">물품후원</div>
                         <div class="img-wrap"><img src="../images/sponsor/corporate06.png" alt="물품후원"></div>
                         <p>
@@ -133,7 +133,7 @@ $PAGE_CODE_2 = "0302";
                             등에 지원될 물품으로 후원합니다.
                         </p>
                     </li>
-                    <li>
+                    <li data-aos="fade-up">
                         <div class="top">봉사활동</div>
                         <div class="img-wrap"><img src="../images/sponsor/corporate07.png" alt="봉사활동"></div>
                         <p>
@@ -142,13 +142,17 @@ $PAGE_CODE_2 = "0302";
                         </p>
                     </li>
                 </ul>
-                <div class="button">
-                    <a href="#none">기업후원 문의하기</a>
+                <div class="button pop_btn" data-aos="fade-up">
+                    <a href="javascript:alert('준비중입니다');">기업후원 문의하기</a>
                 </div>
             </div>
         </article>
     </section>
 </main>
+
+<?php
+include_once "../include/contact_popup.html"
+?>
 
 <?php
 include_once "../include/footer.html"
