--- a/sponsor/list.html
+++ b/sponsor/list.html
@@ -24,7 +24,7 @@ $PAGE_CODE_2 = "0304";
                     <li class="active"><a href="../sponsor/list.html">후원내역</a></li>
                 </ul>
                 <div class="contents">
-                    <div class="info">
+                    <div class="info" data-aos="fade-up">
                         <div class="banner">
                             <img src="../images/sponsor/list01.png" alt="활동 실적 내역 공개를 통한 투명한 후원">
                         </div>
