--- a/campaign/list02.html
+++ b/campaign/list02.html
@@ -22,11 +22,11 @@ $PAGE_CODE_2 = "0402";
                     <li class="active"><a href="../campaign/list02.html">캠페인후기</a></li>
                 </ul>
                 <div class="contents">
-                    <h2 class="fs-32">
+                    <h2 class="fs-32" data-aos="fade-up">
                         세상의 작은 변화를 꿈꾸는 캠페인 후기를 공개합니다.
                     </h2>
                     <ul>
-                        <li class="t_01">
+                        <li class="t_01" data-aos="fade-up">
                             <a href="./detail.html">
                                 <div class="img-wrap"><img src="../images/campaign/list01.png" alt="캠페인"><span>희망 나누기 캠페인</span></div>
                                 <div class="text">
@@ -36,7 +36,7 @@ $PAGE_CODE_2 = "0402";
                                 </div>
                             </a>
                         </li>
-                        <li class="t_02">
+                        <li class="t_02" data-aos="fade-up">
                             <a href="./detail.html">
                                 <div class="img-wrap"><img src="../images/campaign/list02.png" alt="캠페인"><span>사랑 나누기 캠페인</span></div>
                                 <div class="text">
@@ -46,7 +46,7 @@ $PAGE_CODE_2 = "0402";
                                 </div>
                             </a>
                         </li>
-                        <li class="t_03">
+                        <li class="t_03" data-aos="fade-up">
                             <a href="./detail.html">
                                 <div class="img-wrap"><img src="../images/campaign/list03.png" alt="캠페인"><span>ESG 지원 캠페인</span></div>
                                 <div class="text">
@@ -57,7 +57,7 @@ $PAGE_CODE_2 = "0402";
                                 </div>
                             </a>
                         </li>
-                        <li class="t_01">
+                        <li class="t_01" data-aos="fade-up">
                             <a href="./detail.html">
                                 <div class="img-wrap"><img src="../images/campaign/list01.png" alt="캠페인"><span>희망 나누기 캠페인</span></div>
                                 <div class="text">
@@ -67,7 +67,7 @@ $PAGE_CODE_2 = "0402";
                                 </div>
                             </a>
                         </li>
-                        <li class="t_02">
+                        <li class="t_02" data-aos="fade-up">
                             <a href="./detail.html">
                                 <div class="img-wrap"><img src="../images/campaign/list02.png" alt="캠페인"><span>사랑 나누기 캠페인</span></div>
                                 <div class="text">
@@ -77,7 +77,7 @@ $PAGE_CODE_2 = "0402";
                                 </div>
                             </a>
                         </li>
-                        <li class="t_03">
+                        <li class="t_03" data-aos="fade-up">
                             <a href="./detail.html">
                                 <div class="img-wrap"><img src="../images/campaign/list03.png" alt="캠페인"><span>ESG 지원 캠페인</span></div>
                                 <div class="text">
